Fixed About Content issue, added new photo break in Home

--- a/Less/about.less
+++ b/Less/about.less
@@ -8,9 +8,7 @@
 
 .about_main {
         display: flex;
-        flex-wrap: nowrap;
         justify-content: space-around;
-        max-width: 1245px;
 
     @media @mobile {
         width: 100%;
@@ -24,6 +22,7 @@
         display: flex;
         flex-wrap: wrap;
         color: @green;
+        justify-content: space-around;
         
         
          @media @mobile {
