--- a/Less/cta.less
+++ b/Less/cta.less
@@ -7,9 +7,12 @@
     margin: 0px 10rem;
     border-bottom: 4px dashed @green;
     
+    @media @photo {
+        flex-direction: column;
+        margin: 0 auto;
+    }
     @media @mobile {
         width: 100%;
-        flex-direction: column;
         margin: 0 auto;
         align-content: center;
         
