--- a/Less/global.less
+++ b/Less/global.less
@@ -5,7 +5,7 @@
 
 html {
   font-size: 62.5%;
-//    background: @mirage;
+  background: @mirage;
 
 }
 
