--- a/Less/variables.less
+++ b/Less/variables.less
@@ -23,3 +23,5 @@
 @white:  #f2f2f2;
 
 @mobile: ~"(max-width: 500px)";
+
+@photo: ~"(max-width: 787px)";
